--- a/Spring-backend/doceasy-ms/pom.xml
+++ b/Spring-backend/doceasy-ms/pom.xml
@@ -19,7 +19,15 @@
   	<module>doctor-service</module>
   	<module>appointment-service</module>
   	<module>availability-service</module>
+  	<module>signlogin</module>
+  	
   </modules>
+  <properties>
+  <maven.compiler.source>17</maven.compiler.source>
+  <maven.compiler.target>17</maven.compiler.target>
+  <spring-cloud.version>2021.0.2</spring-cloud.version>
+  </properties>
+  
   
   <dependencyManagement>
 <dependencies>
@@ -30,6 +38,13 @@
 <type>pom</type>
 <scope>import</scope>
 </dependency>
+<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>2021.0.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 </dependencies>
 </dependencyManagement>
 
