--- a/Spring-backend/doceasy-ms/doctor-service/pom.xml
+++ b/Spring-backend/doceasy-ms/doctor-service/pom.xml
@@ -8,7 +8,6 @@
   <artifactId>doctor-service</artifactId>
   <name>doctor-service</name>
   <description>doctor-service</description>
-  <packaging>pom</packaging>
   
   <properties>
 		<java.version>17</java.version>
@@ -47,6 +46,14 @@
 <scope>test</scope>
 </dependency>
 </dependencies>
-
+ <build>
+        <plugins>
+            <!-- Spring Boot Maven plugin -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
